# cnmcScrapper

./: .gitignore  CLAUDE.md  PLAN.md  README.md  additions.txt  config.yaml  main.py  prd.json  progress.txt  proxies.txt  pyproject.toml  requirements.txt  telefonos.csv
scraper/: browser.py  captcha.py  csv_reader.py  database.py  main.py  parser.py  proxy_pool.py  utils.py
scripts/: fetch_proxies.py
scripts/ralph/: progress.txt
tasks/: prd-cnmc-mobile-scraper.md
